# X-Log

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  README.md  X-Log.hpp  docs.md  logging
cmake/: Config.cmake.in
examples/for_testing/: main.cpp
examples/using_json/: config.json  main.cpp
headers/: errors.hpp  format.hpp  handler.hpp  info.hpp  logger.hpp  message.hpp  severity.hpp  stl_includes
inc/: Config.hpp  Filter.hpp  Format.hpp  Handler.hpp  Logger.hpp  Record.hpp  Thread.hpp  config.hpp  errors.hpp  filter.hpp  format.hpp  fwd_declares.hpp  handler.hpp  logger.hpp  logstream.hpp  record.hpp  stl_includes.hpp  u8char_t.hpp  utils.hpp
inc/configs/: BasicParserBase.hpp  ConfigTypeBase.hpp  Json.hpp  Object.hpp  ParserBase.hpp  TypeConfigItf.hpp  ValueType.hpp  Yaml.hpp  json.hpp  object.hpp
inc/configs/interfaces/: ConfigItfBase.hpp  FileHandlerConfigItf.hpp  FilterConfigItf.hpp  FormatConfigItf.hpp  HandlerBaseConfig.hpp  LoggerConfigItf.hpp
inc/format/: CharOutputIter.hpp  DateTimeFormat.hpp  Format.hpp  ansi.hpp  context.hpp
inc/handlers/: FileHandler.hpp  HandlerBase.hpp
inc/streams/: LogFile.hpp  LogStreamBase.hpp  LogStreamIter.hpp  LogStreamTraits.hpp
include/: CMakeLists.txt  X-Log.hpp
include/X-Log/: errors.hpp  format.hpp  handler.hpp  logger.hpp  stl_includes  typedefs.hpp
src/: Config.cpp  Filter.cpp  Format.cpp  Handler.cpp  LogStream.cpp  Logger.cpp  Record.cpp  Thread.cpp  config.cpp  errors.cpp  filter.cpp  format.cpp  handler.cpp  logger.cpp  logstream.cpp  record.cpp  u8char_t.cpp  utils.cpp
src/configs/: BasicParserBase.cpp  ConfigTypeBase.cpp  Json.cpp  Object.cpp  ParserBase.cpp  ValueType.cpp  Yaml.cpp  object.cpp  object.hpp
src/format/: DateTimeFormat.cpp  Format.cpp  ansi.cpp
src/handlers/: HandlerBase.cpp
src/streams/: LogFile.cpp  LogStreamBase.cpp
testing/: testing.hpp
tests/: CMakeLists.txt  format.hpp  formattest.hpp  main.cpp
